style: add word wrap to chat message to prevent overflow

--- a/src/Components/Home/Chat/ChatMessages/ChatMessage/chatMessage.module.css
+++ b/src/Components/Home/Chat/ChatMessages/ChatMessage/chatMessage.module.css
@@ -31,6 +31,7 @@
   & > :nth-child(3) {
     grid-area: message;
     margin-right: 10px;
+    word-break: break-all;
   }
 
   & > :nth-child(4) {
